tests/errors/break_value_call_type_mismatch.dang
# break values contribute to the enclosing call expression type
pub result: [Int!]! = [1, 2, 3].map { x =>
  if (x == 2) {
    break "done"
  }
  x
}
